Fix photo slideshow and red box positioning at 467px-750px
- Add padding-top: 70px to hero-image-section to push slideshow content down
- Set slideshow-container top: 70px and height: calc(100% - 70px) to start below navbar
- Reduce red box overlap from -15vh to -8vh so it doesn't block the photo
- Photo slideshow should now start directly below navbar, red box overlaps less

--- a/src/components/Home.css
+++ b/src/components/Home.css
@@ -399,6 +399,7 @@
     margin: 0;
     padding: 0;
     margin-top: -70px; /* Negative margin to pull image up to navbar */
+    padding-top: 70px; /* Push content down to account for navbar */
     /* Remove any white background */
     background-color: #000;
   }
@@ -406,10 +407,10 @@
   /* Show the slideshow at these sizes */
   .hero-image-section .slideshow-container {
     position: absolute;
-    top: 0;
+    top: 70px; /* Start below navbar */
     left: 0;
     width: 100%;
-    height: 100%;
+    height: calc(100% - 70px); /* Account for navbar space */
   }
   
   .hero-image-section .slideshow {
